# Algo_Trader

./: .gitignore  CMakeLists.txt  README.md  algo_trader  main.cpp  polygon_app
data/: AAPL_daily.csv
src/: benchmark.h  exceptions.h  indicators.cpp  indicators.h  main.cpp  optimizer.cpp  optimizer.h  strategy.cpp  strategy.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_indicators.cpp  test_utils.cpp
